--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ mark2 {
                     </a>
                         <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
-                        <mark2>Columns</mark2>
-                    </a>              
+                        <mark2>Columns
+                    </mark2></a>              
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
