--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@ mark {
   background-color: yellow;
   color: black;
 }
-
 }
-mark2 {
-  background-color: #08FF08;
-  color: black;
+
+.simple-highlight {
+  color: white;
+  background-color: brown;
+  padding: 0.1em 0.2em;
 }
 </style>  
 
@@ -94,10 +95,10 @@ mark2 {
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/prensa">
                         Prensa
                     </a>
-                        <span class="nav-item navbar-text mx-1">/</span>  
+                        <span class="nav-item navbar-text mx-1 simple-highlight">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
-                        <mark2>Columns
-                    </mark2></a>              
+                        Columns
+                    </a>              
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
                         Contact
