--- a/index.html
+++ b/index.html
@@ -58,12 +58,6 @@ mark {
   color: black;
 }
 }
-
-.simple-highlight {
-  color: white;
-  background-color: brown;
-  padding: 0.1em 0.2em;
-}
 </style>  
 
 <meta property="og:title" content="Kenneth Bunker" />
@@ -95,9 +89,9 @@ mark {
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/prensa">
                         Prensa
                     </a>
-                        <span class="nav-item navbar-text mx-1 simple-highlight">/</span>  
+                        <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
-                        Columns
+                        <mark style="background: #00ced1!important">Marked text</mark>
                     </a>              
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
