--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ mark {
                     </a>
                         <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
-                        <mark style="background: #08FF08!important">Marked text</mark>
+                        <mark style="background: #ffffff!important">Marked text</mark>
                     </a>              
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
@@ -135,7 +135,7 @@ mark {
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
 
-<p>2023.“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.” <em>Party Politics</em>. (with Gabriel Negretto). <a href="https://doi.org/10.1177/13540688231196111">doi</a></p>
+<p>2023.<mark style="background: #ffffff#08FF08!important">“The Party System Effects of Unstable Electoral Rules: Evidence from New Democracies in Latin America.”</mark><em>Party Politics</em>. (with Gabriel Negretto). <a href="https://doi.org/10.1177/13540688231196111">doi</a></p>
 
 <p>2022. “Forecasting two-horse races in new democracies: Accuracy, precision and error” <em>Revista Lationamericana de Opinión Pública</em>. 11(1), 81–108. <a href="https://doi.org/10.14201/rlop.25374">doi</a></p>
 
