--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ mark {
                     </a>
                         <span class="nav-item navbar-text mx-1">/</span>  
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/columns">
-                        <mark style="background: #ffffff!important">Marked text</mark>
+                        <mark style="background: #ffffff!important">Columns</mark>
                     </a>              
                         <span class="nav-item navbar-text mx-1">/</span>
                     <a class="nav-item nav-link" href="https://kennethbunker.github.io/contact">
