--- a/columns/index.html
+++ b/columns/index.html
@@ -421,6 +421,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20231119 - Un mundo paralelo</li>
 <li>20231112 - La casta pura</li>
 <li>20231105 - Una Constitución de consensos y no de extremos</li>
 <li>20231027 - El crépusculo de la generación dorada</li>
