--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ mark {
 
 <hr>
 <p>My forthcoming book (with Jorge Heine) is called:</p>
-<p class="shifted">💎 <strong><mark>The Chilean Road to a New Constitution: The End of Neoliberalism? (Routledge)</mark></strong></p>
+<p class="shifted">💎 <strong>The Chilean Road to a New Constitution: The End of Neoliberalism? (Routledge)</strong></p>
 <hr>
 <p>You can find a short list of my most recent publications below:</p>
 <ul>
