--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20231116 - El rigor de la justicia</li>
 <li>20231110 - La prueba del pato</li>
 <li>20231107 - La guinda de la torta</li>
 <li>20231103 - Los gestos cuestan caro</li>
@@ -421,6 +422,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20231124 - El vuelo fallido</li>
 <li>20231119 - Un mundo paralelo</li>
 <li>20231112 - La casta pura</li>
 <li>20231105 - Una Constitución de consensos y no de extremos</li>
