--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20231116 - El fantasma vuelve</li>
 <li>20231116 - El rigor de la justicia</li>
 <li>20231110 - La prueba del pato</li>
 <li>20231107 - La guinda de la torta</li>
