--- a/covers/index.html
+++ b/covers/index.html
@@ -158,6 +158,18 @@ gap: 5px;
 
 <div class="parent">
 <div>
+    <img src="/img/20231201%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20231201%20-%20La%20Segunda.png"> 
+  </div>
+  <div>
+    <img src="/img/20231201%20-%20La%20Segunda.png"> 
+</div>
+</div>
+
+<div class="parent">
+<div>
     <img src="/img/20231013%20-%20La%20Segunda.png"> 
   </div>
   <div>
