--- a/covers/index.html
+++ b/covers/index.html
@@ -327,17 +327,24 @@ gap: 5px;
 </div>
 
 <div class="parent">
-<div>
-    <img src="/img/20200323%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
-    <img src="/img/20210808%20-%20MercurioValpo.png"> 
-  </div>
-  <div>
-    <img src="/img/20210808%20-%20MercurioValpo.png">
-</div>
+    <div>
+        <img src="/img/20200323%20-%20La%20Segunda.png"> 
+    </div>
+    <div>
+        <img src="/img/20170725%20-%20La Segunda.png"> 
+    </div>
 </div>
 
+<h3 id="on-the-front-page">El Mercurio de Valparaíso</h3>
+
+<div class="parent">
+    <div>
+        <img src="/img/20210808%20-%20MercurioValpo.png"> 
+    </div>
+    <div>
+        <img src="/img/20210808%20-%20MercurioValpo.png">
+    </div>
+</div>
 
 <h3 id="on-the-front-page">El Mercurio</h3>
 
@@ -358,9 +365,6 @@ gap: 5px;
 <div class="parent">
 <div>
     <img src="/img/20210411%20-%20El_Sur.png"> 
-  </div>
-  <div>
-    <img src="/img/20170725%20-%20La Segunda.png"> 
   </div>
   <div>
     <img src="/img/20160522%20-%20El_Centro.png">
