--- a/columns/index.html
+++ b/columns/index.html
@@ -118,7 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
-<li>20231116 - El fantasma vuelve</li>
+<li>20231208 - Acción y reacción</li>
+<li>20231130 - El fantasma vuelve</li>
 <li>20231116 - El rigor de la justicia</li>
 <li>20231110 - La prueba del pato</li>
 <li>20231107 - La guinda de la torta</li>
@@ -423,6 +424,8 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20231208 - Un cambio en la dirección correcta</li>
+<li>20231201 - Que se jodan</li>
 <li>20231124 - El vuelo fallido</li>
 <li>20231119 - Un mundo paralelo</li>
 <li>20231112 - La casta pura</li>
