--- a/contact/index.html
+++ b/contact/index.html
@@ -74,7 +74,7 @@
   <img src="../img/uss.jpeg" alt="USS" width="30" height="30">
   Universidad San Sebastián </p>
 <blockquote>
-<p>Email: <a href="mailto:kbunker@tresquintos.cl">kenneth.bunker@uss.cl</a></p>
+<p>Email: <a href="mailto:kenneth.bunker@uss.cl">kenneth.bunker@uss.cl</a></p>
 <p>Facultad de Economía y Gobierno</p>
 <p>Bellavista 7</p>
 <p>Recoleta, RM</p>
