--- a/covers/index.html
+++ b/covers/index.html
@@ -160,6 +160,9 @@ gap: 5px;
 <div>
     <img src="/img/20231201%20-%20La%20Segunda.png"> 
   </div>
+<div>
+    <img src="/img/20231212%20-%20La%20Segunda.png"> 
+  </div>
 </div>
 
 <div class="parent">
