--- a/covers/index.html
+++ b/covers/index.html
@@ -29,6 +29,24 @@ display:flex;
 gap: 5px;
 }       
 
+.example {
+  margin: 1em 0;
+  text-align: center;
+}
+
+.example img {
+  width: 30vw;
+  height: 30vw;
+}
+
+.example-cover img {
+  object-fit: cover;
+}
+
+.example-contain img {
+  object-fit: contain;
+}
+
 </style>  
 
 </head>
@@ -165,7 +183,7 @@ gap: 5px;
   </div>
 </div>
 
-<div class="parent">
+<div class="example example-cover">
 <div>
     <img src="/img/20231013%20-%20La%20Segunda.png"> 
   </div>
