--- a/covers/index.html
+++ b/covers/index.html
@@ -29,22 +29,10 @@ display:flex;
 gap: 5px;
 }       
 
-.example {
-  margin: 1em 0;
-  text-align: center;
-}
-
-.example img {
-  width: 30vw;
-  height: 30vw;
-}
-
-.example-cover img {
-  object-fit: cover;
-}
-
-.example-contain img {
-  object-fit: contain;
+.images img {
+  width: 100px;
+  height: 100px;
+  float: left;
 }
 
 </style>  
@@ -183,7 +171,7 @@ gap: 5px;
   </div>
 </div>
 
-<div class="example example-cover">
+<div class="images">
     <img src="/img/20231013%20-%20La%20Segunda.png"> 
     <img src="/img/20230718%20-%20La%20Segunda.png"> 
     <img src="/img/20230720%20-%20La%20Segunda.png"> 
