--- a/covers/index.html
+++ b/covers/index.html
@@ -172,9 +172,15 @@ gap: 5px;
 </div>
 
 <div class="images">
-    <img src="/img/20231013%20-%20La%20Segunda.png"> 
-    <img src="/img/20230718%20-%20La%20Segunda.png"> 
-    <img src="/img/20230720%20-%20La%20Segunda.png"> 
+    <div>
+        <img src="/img/20231013%20-%20La%20Segunda.png"> 
+      </div>
+      <div>
+        <img src="/img/20230718%20-%20La%20Segunda.png"> 
+      </div>
+      <div>
+        <img src="/img/20230720%20-%20La%20Segunda.png"> 
+  </div>
 </div>
 
 
