--- a/covers/index.html
+++ b/covers/index.html
@@ -171,7 +171,7 @@ gap: 5px;
   </div>
 </div>
 
-<div class="images">
+<div class="parent">
     <div>
         <img src="/img/20231013%20-%20La%20Segunda.png"> 
       </div>
