--- a/covers/index.html
+++ b/covers/index.html
@@ -29,11 +29,13 @@ display:flex;
 gap: 5px;
 }       
 
-.images img {
-  width: 100px;
-  height: 100px;
-  float: left;
-}
+      .img-container {
+        display: flex;
+      }
+      .img-container img {
+        width: 33%;
+        padding: 5px;
+      }
 
 </style>  
 
@@ -171,16 +173,10 @@ gap: 5px;
   </div>
 </div>
 
-<div class="parent">
-    <div>
+<div class="img-container">
         <img src="/img/20231013%20-%20La%20Segunda.png"> 
-      </div>
-      <div>
         <img src="/img/20230718%20-%20La%20Segunda.png"> 
-      </div>
-      <div>
         <img src="/img/20230720%20-%20La%20Segunda.png"> 
-  </div>
 </div>
 
 
