--- a/covers/index.html
+++ b/covers/index.html
@@ -176,19 +176,13 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
-<div>
+<div class="img-container">
     <img src="/img/20230504%20-%20La%20Segunda.png">
-  </div>
-  <div>
     <img src="/img/20230508%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
     <img src="/img/20210301%20-%20La%20Segunda.png">
 </div>
-</div>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20230413%20-%20La%20Segunda.png"> 
   </div>
@@ -201,7 +195,7 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20230313%20-%20La%20Segunda.png"> 
   </div>
@@ -214,7 +208,7 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20221226%20-%20La%20Segunda.png"> 
   </div>
@@ -226,7 +220,7 @@ gap: 5px;
 </div>
 </div>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20220722%20-%20La%20Segunda.png"> 
   </div>
