--- a/covers/index.html
+++ b/covers/index.html
@@ -170,11 +170,10 @@ gap: 5px;
 </div>
 
 <div class="img-container">
-        <img src="/img/20231013%20-%20La%20Segunda.png"> 
-        <img src="/img/20230718%20-%20La%20Segunda.png"> 
-        <img src="/img/20230720%20-%20La%20Segunda.png"> 
+    <img src="/img/20231013%20-%20La%20Segunda.png"> 
+    <img src="/img/20230718%20-%20La%20Segunda.png"> 
+    <img src="/img/20230720%20-%20La%20Segunda.png"> 
 </div>
-
 
 <div class="img-container">
     <img src="/img/20230504%20-%20La%20Segunda.png">
@@ -183,56 +182,32 @@ gap: 5px;
 </div>
 
 <div class="img-container">
-<div>
     <img src="/img/20230413%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
     <img src="/img/20230410%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
     <img src="/img/20230420%20-%20La%20Segunda.png">
 </div>
-</div>
 
 
 <div class="img-container">
-<div>
     <img src="/img/20230313%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
     <img src="/img/20230223%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
     <img src="/img/20230207%20-%20La%20Segunda.png">
 </div>
-</div>
 
 
 <div class="img-container">
-<div>
     <img src="/img/20221226%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
     <img src="/img/20221220%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
     <img src="/img/20220811%20-%20La%20Segunda.png">
 </div>
+
+<div class="img-container">
+    <img src="/img/20220722%20-%20La%20Segunda.png"> 
+    <img src="/img/20220719%20-%20La%20Segunda.png"> 
+    <img src="/img/20210419%20-%20La%20Segunda.png">
 </div>
 
 <div class="img-container">
-<div>
-    <img src="/img/20220722%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
-    <img src="/img/20220719%20-%20La%20Segunda.png"> 
-  </div>
-  <div>
-    <img src="/img/20210419%20-%20La%20Segunda.png">
-</div>
-</div>
-
-<div class="parent">
 <div>
     <img src="/img/20220711%20-%20La%20Segunda.png"> 
   </div>
