--- a/covers/index.html
+++ b/covers/index.html
@@ -88,31 +88,19 @@ gap: 5px;
 
 <h3 id="on-the-front-page">Las Últimas Noticias</h3>
 
-<div class="parent">
-<div>
+<div class="img-container">
     <img src="/img/20210719%20-%20LUN.png">
-</div>
-<div>
     <img src="/img/20211122%20-%20LUN.png">
-</div>
-<div>
     <img src="/img/20211220%20-%20LUN.png">
 </div>
-</div>
 
-<div class="parent">
-<div>
+<div class="img-container">
     <img src="/img/20220905%20-%20LUN.png">
-</div>
-<div>
     <img src="/img/20210720%20-%20LUN.png">
-</div>
-<div>
     <img src="/img/20210719%20-%20LUN.png">
 </div>
-</div>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20231110%20-%20LUN.png">
 </div>
@@ -123,7 +111,7 @@ gap: 5px;
 <h3 id="on-the-front-page">Regional</h3>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20211212%20-%20AustralValdivia.png"> 
   </div>
@@ -135,7 +123,7 @@ gap: 5px;
 </div>
 </div>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20211212%20-%20MercurioValpo.png"> 
   </div>
@@ -147,7 +135,7 @@ gap: 5px;
 </div>
 </div>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20211212%20-%20AustralOsorno.png"> 
   </div>
@@ -220,7 +208,7 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20220411%20-%20La%20Segunda.png"> 
   </div>
@@ -233,7 +221,7 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20211130%20-%20La%20Segunda.png"> 
   </div>
@@ -246,7 +234,7 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20210806%20-%20La%20Segunda.png"> 
   </div>
@@ -259,7 +247,7 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20210909%20-%20La%20Segunda.png"> 
   </div>
@@ -272,7 +260,7 @@ gap: 5px;
 </div>
 
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20210924%20-%20La%20Segunda.png"> 
   </div>
@@ -284,7 +272,7 @@ gap: 5px;
 </div>
 </div>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20210301%20-%20La%20Segunda.png"> 
   </div>
@@ -296,7 +284,7 @@ gap: 5px;
 </div>
 </div>
 
-<div class="parent">
+<div class="img-container">
     <div>
         <img src="/img/20200323%20-%20La%20Segunda.png"> 
     </div>
@@ -307,7 +295,7 @@ gap: 5px;
 
 <h3 id="on-the-front-page">El Mercurio de Valparaíso</h3>
 
-<div class="parent">
+<div class="img-container">
     <div>
         <img src="/img/20210808%20-%20MercurioValpo.png"> 
     </div>
@@ -318,7 +306,7 @@ gap: 5px;
 
 <h3 id="on-the-front-page">El Mercurio</h3>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20230208%20-%20El%20Mercurio.png"> 
   </div>
@@ -332,7 +320,7 @@ gap: 5px;
 
 <h3 id="on-the-front-page">Regional</h3>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20210411%20-%20El_Sur.png"> 
   </div>
@@ -341,7 +329,7 @@ gap: 5px;
 </div>
 </div>
 
-<div class="parent">
+<div class="img-container">
 <div>
     <img src="/img/20210411%20-%20Estrella_Iquique.png"> 
   </div>
