--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20231214 - La Providencia</li>
 <li>20231208 - Acción y reacción</li>
 <li>20231130 - El fantasma vuelve</li>
 <li>20231116 - El rigor de la justicia</li>
@@ -413,8 +414,6 @@ mark {
 
 </div>
 </div>
-
-
 
   <div class="column">
     <div id="content">
