--- a/index.html
+++ b/index.html
@@ -1652,6 +1652,10 @@ mark {
 <ul>
 
 
+
+<li><strong>Financial Times</strong>. <a href="
+https://www.ft.com/content/70611572-1563-47d1-b0d7-0bc9aadf9138?accessToken=zwAAAYx6OdS8kc9wYRVyFWNH0dOw1wvJqt-ROA.MEUCIFGZey0H62X6K8UStZzmKHvYUb7McTprPzIgElAjPuwDAiEArR4oOytOukwSj-WCg-oy_ecLd0TM0Qfuyv8FP8Ac0is&segmentId=e95a9ae7-622c-6235-5f87-51e412b47e97&shareType=enterprise/">Chileans reject second attempt to rewrite constitution.</a> 18 December, 2023.</li>
+
 <li><strong>Bloomberg</strong>. <a href="https://www.bnnbloomberg.ca/chileans-again-vote-on-new-constitution-this-time-a-business-friendly-one-1.2012793/">Chileans Again Vote on New Constitution, This Time a ‘Business Friendly’ One.</a> 17 December, 2023.</li>
 
 <li><strong>Bloomberg en Línea</strong>. <a href="https://www.bloomberglinea.com/latinoamerica/chile/chilenos-decidiran-de-nuevo-sobre-una-nueva-constitucion/">Chilenos salen a votar para decidir sobre una nueva Constitución.</a> 17 December, 2023.</li>
