--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20231218 - La Constitución no era el problema</li>
+<li>20231216 - Llueve sobre mojado</li>
 <li>20231214 - La Providencia</li>
 <li>20231208 - Acción y reacción</li>
 <li>20231130 - El fantasma vuelve</li>
@@ -423,6 +425,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20231215 - Fuera de control</li>
 <li>20231208 - Un cambio en la dirección correcta</li>
 <li>20231201 - Que se jodan</li>
 <li>20231124 - El vuelo fallido</li>
