--- a/index.html
+++ b/index.html
@@ -1701,6 +1701,8 @@ mark {
 <ul>
 
 
+<li><strong>The Times</strong>. <a href="https://www.thetimes.co.uk/article/chile-votes-to-reject-new-constitution-again-s7kbjlgnw/">Chile votes to reject new constitution again.</a> 18 December, 2023.</li>
+
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2023-12-17/chile-rejects-second-proposed-constitution/">Weary Chileans Reject Second Proposed Constitution, Dealing Blow to Country’s Political Class.</a> 18 December, 2023.</li>
 
 <li><mark><strong>Financial Times</strong>. <a href="
