--- a/interviews/index.html
+++ b/interviews/index.html
@@ -126,6 +126,10 @@
 </li>
 <li><strong>El Líbero</strong>. <a href="https://ellibero.cl/actualidad/kenneth-bunker-rd-esta-practicamente-varado-y-sin-el-capitan-jackson-en-el-timon-es-un-barco-a-la-deriva/">Kenneth Bunker: “RD está prácticamente varado y sin el capitán Jackson en el timón, es un barco a la deriva”.</a> 19 february, 2021.
 </li>
+
+<li><strong>Las Últimas Noticias</strong>. <a href="https://www.lun.com/Pages/NewsDetail.aspx?dt=2019-12-02&EsAviso=0&PaginaId=2&bodyid=0/">Kenneth Bunker, doctor en Ciencia Política y profesor visitante en la Universidad de Milán: "Hagamos una constitución que se pueda leer en el metro o en un par de días".</a> 2 December, 2019.
+</li>
+
 <li><strong>Duna</strong>. <a href="http://www.duna.cl/podcasts/kenneth-bunker-esta-eleccion-se-va-a-definir-con-200-mil-o-100-mil-votos-entonces-puede-ir-para-cualquier-lado/">Kenneth Bunker:&quot; esta elección se va a definir con 200 mil o 100 mil votos, entonces puede ir para cualquier lado.</a> 30 November, 2017.
 </li>
 <li><strong>Cooperativa</strong>. <a href="https://www.cooperativa.cl/noticias/pais/politica/presidenciales/kenneth-bunker-pinera-esta-en-un-piso-de-43-por-ciento-pase-lo-que-pase/2017-11-17/084246.html">Kenneth Bunker: Piñera está en un piso de 43 por ciento, pase lo que pase.</a> 17 November, 2017.
