--- a/prensa/index.html
+++ b/prensa/index.html
@@ -1018,6 +1018,10 @@
 <li><strong>Diario Financiero</strong>. <a href="https://www.df.cl/noticias/economia-y-politica/actualidad/la-polemica-sobre-chilezuela-analizada-desde-la-perspectiva/2017-12-15/125501.html">La polémica sobre Chilezuela analizada desde la perspectiva.</a> 15 December, 2019.
 </li>
 
+
+<li><strong>Las Últimas Noticias</strong>. <a href="https://www.lun.com/Pages/NewsDetail.aspx?dt=2019-12-02&EsAviso=0&PaginaId=2&bodyid=0/">Kenneth Bunker, doctor en Ciencia Política y profesor visitante en la Universidad de Milán: "Hagamos una constitución que se pueda leer en el metro o en un par de días".</a> 2 December, 2019.
+</li>
+
 <li><strong>Chile Today</strong>. <a href="https://chiletoday.cl/tag/kenneth-bunker/">Expectations About a Path to a New Constitution in Chile.</a> 16 November, 2019.
 </li>
 
