--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,8 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20231220 - Efecto de arrastre</li>
+<li>20231219 - Volver a empezar</li>    
 <li>20231218 - La Constitución no era el problema</li>
 <li>20231216 - Llueve sobre mojado</li>
 <li>20231214 - La Providencia</li>
