--- a/covers/index.html
+++ b/covers/index.html
@@ -128,6 +128,7 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20231201%20-%20La%20Segunda.png"> 
     <img src="/img/20231212%20-%20La%20Segunda.png"> 
+    <img src="/img/20231221%20-%20La%20Segunda.png"> 
 </div>
 
 <div class="img-container">
