--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -86,18 +86,18 @@ gap: 5px;
 
 
 
-<h3 id="on-the-front-page">Las Últimas Noticias</h3>
+<h3 id="on-the-front-page">Ideas: Volumen 1</h3>
 
 <div class="img-container">
-    <img src="/img/20210719%20-%20LUN.png">
-    <img src="/img/20211122%20-%20LUN.png">
-    <img src="/img/20211220%20-%20LUN.png">
+    <img src="/estudio%209.png">
+    <img src="/estudio%209.png">    
+    <img src="/estudio%209.png">
 </div>
 
 <div class="img-container">
-    <img src="/img/20220905%20-%20LUN.png">
-    <img src="/img/20210720%20-%20LUN.png">
-    <img src="/img/20210719%20-%20LUN.png">
+    <img src="/estudio%209.png">
+    <img src="/estudio%209.png">    
+    <img src="/estudio%209.png">
 </div>
 
 
