--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -79,19 +79,18 @@ gap: 5px;
 <div class="container">
 
 
-<h2 id="on-the-front-page">On the front page</h2>
+<h2 id="on-the-front-page">Ideas: Volumen 1</h2>
 <hr>
-<p><em>For a collection of my comments in the international press, click <a href="https://kennethbunker.github.io/press">here</a>. For a collection of my comments in the Chilean press, click <a href="https://kennethbunker.github.io/prensa">here</a>.</em></p>
+<p><em>Abajo puedes descargar los estudios de la serie Ideas de Laboratorio de Democracia y Gobierno de la Facultad de Economía y Gobierno de la Universidad San Sebastián.</em></p>
 <hr>
-
 
 
 <h3 id="on-the-front-page">Ideas: Volumen 1</h3>
 
 <div class="img-container">
-    <img src="/estudio%209.png">
-    <img src="/estudio%209.png">    
-    <img src="/estudio%209.png">
+    <img src="estudio%209.png">
+    <img src="estudio%209.png">    
+    <img src="estudio%209.png">
 </div>
 
 <div class="img-container">
