--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -88,9 +88,9 @@ gap: 5px;
 <h3 id="on-the-front-page">Ideas: Volumen 1</h3>
 
 <div class="img-container">
-    <img src="estudio%209.png">
-    <img src="estudio%209.png">    
-    <img src="estudio%209.png">
+    <img src="/labdemgob/estudio%209.png">
+    <img src="/labdemgob/estudio%209.png">    
+    <img src="/labdemgob/estudio%209.png">
 </div>
 
 <div class="img-container">
