--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -87,18 +87,27 @@ gap: 5px;
 
 <h3 id="on-the-front-page">Ideas: Volumen 1</h3>
 
-<div class="img-container">
-    <img src="/labdemgob/estudio%209.png">
-    <img src="/labdemgob/estudio%209.png">    
-    <img src="/labdemgob/estudio%209.png">
+<div class="img-container">  
+    <img src="/labdemgob/estudio%2010.png">
 </div>
 
 <div class="img-container">
-    <img src="/estudio%209.png">
-    <img src="/estudio%209.png">    
-    <img src="/estudio%209.png">
+    <img src="/labdemgob/estudio%209.png">
+    <img src="/labdemgob/estudio%208.png">    
+    <img src="/labdemgob/estudio%207.png">
 </div>
 
+<div class="img-container">
+    <img src="/labdemgob/estudio%206.png">
+    <img src="/labdemgob/estudio%205.png">    
+    <img src="/labdemgob/estudio%204.png">
+</div>
+
+<div class="img-container">
+    <img src="/labdemgob/estudio%203.png">
+    <img src="/labdemgob/estudio%202.png">    
+    <img src="/labdemgob/estudio%201.png">
+</div>
 
 <hr>
 <h2 id="links">Links</h2>
