--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -88,7 +88,7 @@ gap: 5px;
 <h3 id="on-the-front-page">Ideas: Volumen 1</h3>
 
 <div class="img-container">  
-    <img src="/labdemgob/estudio%2010.png">
+    <p><a href="https://www.w3schools.com"><img src="/labdemgob/estudio%2010.png"></a></p>
 </div>
 
 <div class="img-container">
