--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -88,13 +88,12 @@ gap: 5px;
 <h3 id="on-the-front-page">Ideas: Volumen 1</h3>
 
 <div class="img-container">  
-    <p><a href="https://www.w3schools.com"><img src="/labdemgob/estudio%2010.png"></a></p>
+    <p><a href="https://www.researchgate.net/publication/377121696_A_que_hora_y_con_que_precision_se_conocen_los_resultados_electorales_en_Chile/"><img src="/labdemgob/estudio%2010.png"></a></p>
 </div>
 
 <div class="img-container">
-    <img src="/labdemgob/estudio%209.png">
-    <img src="/labdemgob/estudio%208.png">    
-    <img src="/labdemgob/estudio%207.png">
+    <p><a href="https://www.researchgate.net/publication/377121696_A_que_hora_y_con_que_precision_se_conocen_los_resultados_electorales_en_Chile/"><img src="/labdemgob/estudio%209.png"></a></p>
+    <p><a href="https://www.researchgate.net/publication/377121696_A_que_hora_y_con_que_precision_se_conocen_los_resultados_electorales_en_Chile/"><img src="/labdemgob/estudio%208.png"></a></p> <p><a href="https://www.researchgate.net/publication/377121696_A_que_hora_y_con_que_precision_se_conocen_los_resultados_electorales_en_Chile/"><img src="/labdemgob/estudio%207.png"></a></p>
 </div>
 
 <div class="img-container">
