--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -79,13 +79,13 @@ gap: 5px;
 <div class="container">
 
 
-<h2 id="on-the-front-page">Ideas: Volumen 1</h2>
+<h2 id="on-the-front-page">Ideas</h2>
 <hr>
 <p><em>Abajo puedes descargar los estudios de la serie Ideas de Laboratorio de Democracia y Gobierno de la Facultad de Economía y Gobierno de la Universidad San Sebastián.</em></p>
 <hr>
 
 
-<h3 id="on-the-front-page">Ideas: Volumen 1</h3>
+<h3 id="on-the-front-page">Volumen 1 (2023-2024)</h3>
 
 <div class="img-container">  
     <img src="/labdemgob/estudio%2010.png">
