--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -79,7 +79,7 @@ gap: 5px;
 <div class="container">
 
 
-<h2 id="on-the-front-page">Ideas</h2>
+<h2 id="on-the-front-page">Colección de Estudios: Ideas</h2>
 <hr>
 <p><em>Abajo puedes descargar los estudios de la serie Ideas de Laboratorio de Democracia y Gobierno de la Facultad de Economía y Gobierno de la Universidad San Sebastián.</em></p>
 <hr>
