--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -81,7 +81,7 @@ gap: 5px;
 
 <h2 id="on-the-front-page">Colección de Estudios: Ideas</h2>
 <hr>
-<p><em>Abajo puedes descargar los estudios de la serie Ideas de Laboratorio de Democracia y Gobierno de la Facultad de Economía y Gobierno de la Universidad San Sebastián.</em></p>
+<p><em>Abajo puedes descargar los estudios de la serie Ideas de Laboratorio de Democracia y Gobierno de la Facultad de Economía y Gobierno de la Universidad San Sebastián. Todos los estudios se pueden descargar <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">aquí</a></em></p> 
 <hr>
 
 
