--- a/labdemgob/index.html
+++ b/labdemgob/index.html
@@ -35,7 +35,7 @@ gap: 5px;
       .img-container img {
         width: 33%;
         padding: 5px;
-        float: left;}
+      }
 
 </style>  
 
@@ -81,7 +81,7 @@ gap: 5px;
 
 <h2 id="on-the-front-page">Colección de Estudios: Ideas</h2>
 <hr>
-<p><em>Abajo puedes descargar los estudios de la serie Ideas de Laboratorio de Democracia y Gobierno de la Facultad de Economía y Gobierno de la Universidad San Sebastián. Todos los estudios se pueden descargar <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">aquí</a>.</em></p> 
+<p><em>Abajo puedes revisar los títulos de Ideas, la colección de estudios del Laboratorio de Democracia y Gobierno de la Facultad de Economía y Gobierno de la Universidad San Sebastián. Todos los estudios se pueden descargar <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">aquí</a>.</em></p> 
 <hr>
 
 
