--- a/columns/index.html
+++ b/columns/index.html
@@ -427,6 +427,8 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240107 - Un fracaso en cheque a fecha</li>
+<li>20231222 - El barco de Teseo</li>   
 <li>20231215 - Fuera de control</li>
 <li>20231208 - Un cambio en la dirección correcta</li>
 <li>20231201 - Que se jodan</li>
