--- a/index.html
+++ b/index.html
@@ -172,31 +172,23 @@ mark {
 
 <a href="https://medium.com/@kennethbunker">
   <img src="https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white" alt="tq" height="40">
-</a>
-<a href="https://stackoverflow.com/users/19762533/kenneth">
+</a> <a href="https://stackoverflow.com/users/19762533/kenneth">
   <img src="https://img.shields.io/badge/-Stackoverflow-FE7A16?style=for-the-badge&logo=stack-overflow&logoColor=white" alt="tq" height="40">
-</a>
-
-<a href="https://www.linkedin.com/in/kenneth-bunker/">
+</a> <a href="https://www.linkedin.com/in/kenneth-bunker/">
   <img src="https://img.shields.io/badge/linkedin-%230077B5.svg?style=for-the-badge&logo=linkedin&logoColor=white" alt="tq" height="40">
 </a>
-
 <a href="https://www.researchgate.net/profile/Kenneth-Bunker">
   <img src="https://img.shields.io/badge/ResearchGate-00CCBB?style=for-the-badge&logo=ResearchGate&logoColor=white" alt="tq" height="40">
 </a>
-
 <a href="https://github.com/kennethbunker">
   <img src="https://img.shields.io/badge/GitHub-100000?style=for-the-badge&logo=github&logoColor=white" alt="tq" height="40">
 </a>
-
 <a href="https://orcid.org/my-orcid?orcid=0000-0002-4579-6132">
   <img src="https://img.shields.io/badge/orcid-A6CE39?style=for-the-badge&logo=orcid&logoColor=white" alt="tq" height="40">
 </a>
-
 <a href="https://uss.academia.edu/KennethBunker/">
   <img src="https://img.shields.io/badge/Academia-fff?style=for-the-badge&logo=academia&logoColor=black" alt="tq" height="40">
 </a>
-
 <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&hl=en">
   <img src="https://img.shields.io/badge/Google_Scholar-4285F4?style=for-the-badge&logo=google-scholar&logoColor=white" alt="tq" height="40">
 </a>
