--- a/columns/index.html
+++ b/columns/index.html
@@ -427,6 +427,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240121 - La política del "Cheese & Wine"</li>
 <li>20240114 - El lema del gobierno: lento pero inseguro</li>
 <li>20240107 - Un fracaso en cheque a fecha</li>
 <li>20231222 - El barco de Teseo</li>   
