--- a/covers/index.html
+++ b/covers/index.html
@@ -126,6 +126,10 @@ gap: 5px;
 <h3 id="on-the-front-page">La Segunda</h3>
 
 <div class="img-container">
+    <img src="/img/20240122%20-%20La%20Segunda.png"> 
+</div>
+
+<div class="img-container">
     <img src="/img/20231201%20-%20La%20Segunda.png"> 
     <img src="/img/20231212%20-%20La%20Segunda.png"> 
     <img src="/img/20231221%20-%20La%20Segunda.png"> 
