--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20240131 - Fin de una era</li>    
 <li>20240126 - A la rápida</li>    
 <li>20231220 - Efecto de arrastre</li>
 <li>20231219 - Volver a empezar</li>    
