--- a/interviews/index.html
+++ b/interviews/index.html
@@ -70,6 +70,9 @@
 <hr>
 <ul>
 
+
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-crisis-de-seguridad-el-presidente-debe-militarizar-no-hay-otra-alternativa/">Kenneth Bunker y crisis de seguridad: “El Presidente debe militarizar, no hay otra alternativa”.</a> 3 February, 2024.</li>
+
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-hay-responsabilidad-de-zalaquett-pero-sobre-todo-del-gobierno/">Kenneth Bunker: “Hay responsabilidad de Zalaquett, pero sobre todo del Gobierno”.</a> 9 January, 2024.</li>
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-declaracion-de-crispi-por-caso-convenios-sus-respuestas-son-inverosimiles/">Kenneth Bunker y declaración de Crispi por Caso Convenios: “Sus respuestas son inverosímiles”.</a> 7 November, 2023.</li>
