--- a/press/index.html
+++ b/press/index.html
@@ -72,6 +72,11 @@
 <hr> 
 <ul>
 
+
+<li><strong>TIME</strong>. <a href="https://time.com/6692170/chile-president-sebastian-pinera-dies-helicopter-crash/">Sebastián Piñera, Former President of Chile, Dies in Helicopter Crash at Age 74.</a> 7 January, 2024.</li>
+
+<li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2024-02-06/sebastian-pinera-chile-s-billionaire-ex-president-dies-at-74/">Sebastian Pinera, Chile Billionaire Ex-President, Dies at 74.</a> 7 January, 2024.</li>
+
 <li><strong>The Times</strong>. <a href="https://www.thetimes.co.uk/article/chile-votes-to-reject-new-constitution-again-s7kbjlgnw/">Chile votes to reject new constitution again.</a> 18 December, 2023.</li>
 
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2023-12-17/chile-rejects-second-proposed-constitution/">Weary Chileans Reject Second Proposed Constitution, Dealing Blow to Country’s Political Class.</a> 18 December, 2023.</li>
