--- a/index.html
+++ b/index.html
@@ -1745,12 +1745,16 @@ https://images.lun.com/lunservercontents/NewsPaperPages/2019/dic/02/LUCPR02LU021
 <ul>
 
 
+<li><strong>TIME</strong>. <a href="https://time.com/6692170/chile-president-sebastian-pinera-dies-helicopter-crash/">Sebastián Piñera, Former President of Chile, Dies in Helicopter Crash at Age 74.</a> 7 January, 2024.</li>
+
+<li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2024-02-06/sebastian-pinera-chile-s-billionaire-ex-president-dies-at-74/">Sebastian Pinera, Chile Billionaire Ex-President, Dies at 74.</a> 7 January, 2024.</li>
+
 <li><strong>The Times</strong>. <a href="https://www.thetimes.co.uk/article/chile-votes-to-reject-new-constitution-again-s7kbjlgnw/">Chile votes to reject new constitution again.</a> 18 December, 2023.</li>
 
 <li><strong>Bloomberg</strong>. <a href="https://www.bloomberg.com/news/articles/2023-12-17/chile-rejects-second-proposed-constitution/">Weary Chileans Reject Second Proposed Constitution, Dealing Blow to Country’s Political Class.</a> 18 December, 2023.</li>
 
-<li><mark><strong>Financial Times</strong>. <a href="
-https://www.ft.com/content/70611572-1563-47d1-b0d7-0bc9aadf9138?accessToken=zwAAAYx6OdS8kc9wYRVyFWNH0dOw1wvJqt-ROA.MEUCIFGZey0H62X6K8UStZzmKHvYUb7McTprPzIgElAjPuwDAiEArR4oOytOukwSj-WCg-oy_ecLd0TM0Qfuyv8FP8Ac0is&segmentId=e95a9ae7-622c-6235-5f87-51e412b47e97&shareType=enterprise/">Chileans reject second attempt to rewrite constitution.</a> 18 December, 2023.</mark></li>
+<li><strong>Financial Times</strong>. <a href="
+https://www.ft.com/content/70611572-1563-47d1-b0d7-0bc9aadf9138?accessToken=zwAAAYx6OdS8kc9wYRVyFWNH0dOw1wvJqt-ROA.MEUCIFGZey0H62X6K8UStZzmKHvYUb7McTprPzIgElAjPuwDAiEArR4oOytOukwSj-WCg-oy_ecLd0TM0Qfuyv8FP8Ac0is&segmentId=e95a9ae7-622c-6235-5f87-51e412b47e97&shareType=enterprise/">Chileans reject second attempt to rewrite constitution.</a> 18 December, 2023.</li>
 
 <li><strong>La Nación</strong>. <a href="https://www.lanacion.com.ar/agencias/chilenos-rechazan-por-segunda-vez-en-las-urnas-una-propuesta-de-nueva-constitucion-nid17122023/">Chilenos rechazan por segunda vez en las urnas una propuesta de nueva constitución.</a> 18 December, 2023.</li>
 
