--- a/interviews/index.html
+++ b/interviews/index.html
@@ -71,6 +71,9 @@
 <ul>
 
 
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-protesta-de-alcaldesa-en-festival-de-vina-lo-que-hizo-ripamonti-me-parece-ridiculo-y-burdo/">Kenneth Bunker y protesta de alcaldesa en Festival de Viña: “Lo que hizo Ripamonti me parece ridículo y burdo”.</a> 27 February, 2024.</li>
+
+
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-crisis-de-seguridad-el-presidente-debe-militarizar-no-hay-otra-alternativa/">Kenneth Bunker y crisis de seguridad: “El Presidente debe militarizar, no hay otra alternativa”.</a> 3 February, 2024.</li>
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-hay-responsabilidad-de-zalaquett-pero-sobre-todo-del-gobierno/">Kenneth Bunker: “Hay responsabilidad de Zalaquett, pero sobre todo del Gobierno”.</a> 9 January, 2024.</li>
