--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20240305 - El gran outsider</li>    
 <li>20240207 - Piñera fue un democráta</li>    
 <li>20240202 - El acertijo</li>    
 <li>20240131 - Fin de una era</li>    
