--- a/columns/index.html
+++ b/columns/index.html
@@ -432,6 +432,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240303 - Fin del primer tiempo: La hora de los "quiubos"</li>
 <li>20240303 - La tesis de Winter y el motín de los marineros</li>
 <li>20240208 - La caja de herramientas de Piñera</li>
 <li>20240121 - La política del "Cheese & Wine"</li>
