--- a/interviews/index.html
+++ b/interviews/index.html
@@ -70,9 +70,9 @@
 <hr>
 <ul>
 
+<li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-a-la-mitad-de-su-gobierno-boric-ya-tiene-el-sindrome-de-pato-cojo/">Kenneth Bunker: “A la mitad de su gobierno, Boric ya tiene el síndrome del pato cojo”.</a> 26 March, 2024.</li>
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-protesta-de-alcaldesa-en-festival-de-vina-lo-que-hizo-ripamonti-me-parece-ridiculo-y-burdo/">Kenneth Bunker y protesta de alcaldesa en Festival de Viña: “Lo que hizo Ripamonti me parece ridículo y burdo”.</a> 27 February, 2024.</li>
-
 
 <li><strong>Ex-Ante</strong>. <a href="https://www.ex-ante.cl/kenneth-bunker-y-crisis-de-seguridad-el-presidente-debe-militarizar-no-hay-otra-alternativa/">Kenneth Bunker y crisis de seguridad: “El Presidente debe militarizar, no hay otra alternativa”.</a> 3 February, 2024.</li>
 
