--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,11 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20240328 - Cancelado</li>  
+<li>20240327 - Bandera blanca</li>  
+<li>20240316 - Más alla del bien y el mal</li>  
+<li>20240308 - Los patines de Cataldo</li>  
+<li>20240305 - El primer outsider</li>  
 <li>20240305 - El gran outsider</li>    
 <li>20240207 - Piñera fue un democráta</li>    
 <li>20240202 - El acertijo</li>    
@@ -432,7 +437,10 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
-<li>20240303 - Fin del primer tiempo: La hora de los "quiubos"</li>
+<li>20240322 - Vendieron el auto para comprar bencina</li>
+<li>20240320 - La política del lamento y la excusa</li>
+<li>20240315 - Boric y Vodanovic</li>
+<li>20240310 - Fin del primer tiempo: La hora de los "quiubos"</li>
 <li>20240303 - La tesis de Winter y el motín de los marineros</li>
 <li>20240208 - La caja de herramientas de Piñera</li>
 <li>20240121 - La política del "Cheese & Wine"</li>
