--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,7 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+<li>20240406 - La antítesis</li>  
 <li>20240329 - Acto 1, escena 4</li>  
 <li>20240328 - ¿Cancelado?</li>  
 <li>20240327 - Bandera blanca</li>  
@@ -438,6 +439,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240407 - La bala de plata: una reforma política simple</li>
 <li>20240331 - ¿Por qué el Socialismo Democrático se niega a poner orden en la casa?</li>    
 <li>20240322 - Vendieron el auto para comprar bencina</li>
 <li>20240320 - La política del lamento y la excusa</li>
