--- a/columns/index.html
+++ b/columns/index.html
@@ -439,6 +439,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240407 - Chile y el caso de Ronald Ojeda: Todo tibio. Demasiado tibio</li>
 <li>20240407 - La bala de plata: una reforma política simple</li>
 <li>20240331 - ¿Por qué el Socialismo Democrático se niega a poner orden en la casa?</li>    
 <li>20240322 - Vendieron el auto para comprar bencina</li>
