--- a/columns/index.html
+++ b/columns/index.html
@@ -118,6 +118,9 @@ mark {
 <p><a href="https://www.lun.com"><em>Las Últimas Noticias</em></a></p>
 <hr>
 <ul>
+
+<li>20240419 - La pelota al piso</li>  
+<li>20240418 - Mismo problema, distinta reacción</li>  
 <li>20240406 - La antítesis</li>  
 <li>20240329 - Acto 1, escena 4</li>  
 <li>20240328 - ¿Cancelado?</li>  
