--- a/covers/index.html
+++ b/covers/index.html
@@ -245,6 +245,32 @@ gap: 5px;
     <img src="/img/20211215%20-%20La_Discusion.png">
 </div>
 
+
+<div class="img-container">
+    <img src="/img/20240414%20-%20El%20Sur.png"> 
+    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
+    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Antofagasta.png">
+</div>
+
+
+
+
+
+
+
+
+20240414 - El Sur.jpg
+20240414 - El Mercurio de Calama.jpg
+20240414 - El Mercurio de Antofagasta.jpg
+20240414 - El Austral.jpg
+20240414 - Diario Llanquihue.jpg
+20240414 - Diario de Atacama.jpg
+20240414 - Austral de Valdivia.jpg
+20240414 - Austral de Osorno.jpg
+
+
+
+
 <hr>
 <h2 id="links">Links</h2>
 <p><a href="https://kennethbunker.github.io/">Home</a> / <a href="https://uss.academia.edu/KennethBunker">Academia</a> /  <a href="https://publons.com/researcher/1861400/kenneth-bunker/">Publons</a> / <a href="https://scholar.google.cl/citations?user=kFHaW6wAAAAJ&amp;hl">Google Scholar</a> / <a href="https://www.researchgate.net/profile/Kenneth-Bunker">ResearchGate</a> / <a href="https://www.dropbox.com/s/e1hjycqkmixr5x5/CV_Kenneth_Bunker.pdf?dl=0">CV</a> / <a href="https://orcid.org/0000-0002-4579-6132">Orcid</a> / <a href="https://www.webofscience.com/wos/author/record/R-4439-2018">Web of Science</a> / <a href="https://twitter.com/kennethbunker">Twitter</a> / <a href="https://investigadores.anid.cl/es/public_search/researcher?id=8287">Anid</a> / <a href="https://kennethbunker.github.io/columns">Columns</a> / <a href="https://kennethbunker.github.io/press">Press (Global)</a> / <a href="https://kennethbunker.github.io/prensa">Prensa (Chile)</a> / <a href="https://kennethbunker.github.io/interviews">Interviews</a> / <a href="https://cl.linkedin.com/in/kennethbunker">LinkedIn</a> / <a href="https://kennethbunker.github.io/covers">On the Front Page</a> / <a href="https://tresquintos.cl">Tresquintos</a> / <a href="https://twitter.com/cuatroseptimos">Cuatroseptimos</a> / <a href="https://politicotechglobal.com">Politico Tech Global</a> / <a href="mailto:kbunker@politicotechglobal.com">E-mail</a> / <a href="https://www.uss.cl/">Universidad San Sebastián</a> / <a href="https://www.uss.cl/facultades-y-carreras/economia-y-gobierno/">Facultad de Economía y Gobierno</a></p> / <a href="https://www.researchgate.net/lab/Laboratorio-de-Democracia-y-Gobierno-Kenneth-Bunker">Democracy and Government Lab</a></p>
