--- a/covers/index.html
+++ b/covers/index.html
@@ -253,20 +253,17 @@ gap: 5px;
 </div>
 
 
+<div class="img-container">
+    <img src="/img/20240414%20-%20El%20Austral.png"> 
+    <img src="/img/20240414%20-%20Diario%20Llanquihue.png"> 
+    <img src="/img/20240414%20-%20Diario%20de%20Atacama.png">
+</div>
 
 
-
-
-
-
-20240414 - El Sur.jpg
-20240414 - El Mercurio de Calama.jpg
-20240414 - El Mercurio de Antofagasta.jpg
-20240414 - El Austral.jpg
-20240414 - Diario Llanquihue.jpg
-20240414 - Diario de Atacama.jpg
-20240414 - Austral de Valdivia.jpg
-20240414 - Austral de Osorno.jpg
+<div class="img-container">
+    <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
+    <img src="/img/20240414%20-%20Austral%20de%20Osorno.png"> 
+</div>
 
 
 
