--- a/covers/index.html
+++ b/covers/index.html
@@ -242,13 +242,14 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20210411%20-%20Estrella_Iquique.png"> 
     <img src="/img/20211215%20-%20La_Discusion.png"> 
-    <img src="/img/20211215%20-%20La_Discusion.png">
+    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Antofagasta.png">
 </div>
 
 
 <div class="img-container">
     <img src="/img/20240414%20-%20El%20Sur.png"> 
     <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
+    <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
 </div>
 
 
@@ -262,7 +263,6 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
     <img src="/img/20240414%20-%20Austral%20de%20Osorno.png"> 
-    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Antofagasta.png">
 </div>
 
 
