--- a/covers/index.html
+++ b/covers/index.html
@@ -248,8 +248,6 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20240414%20-%20El%20Sur.png"> 
-    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
-    <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
 </div>
 
 
@@ -263,8 +261,13 @@ gap: 5px;
 <div class="img-container">
     <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
     <img src="/img/20240414%20-%20Austral%20de%20Osorno.png"> 
+    <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
 </div>
 
+
+<div class="img-container">
+<img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
+</div>
 
 
 
