--- a/covers/index.html
+++ b/covers/index.html
@@ -106,24 +106,6 @@ gap: 5px;
 </div>
 
 
-<h3 id="on-the-front-page">Regional</h3>
-
-<div class="img-container">
-    <img src="/img/20211212%20-%20AustralValdivia.png"> 
-    <img src="/img/20211212%20-%20El_Llanquihue.png"> 
-    <img src="/img/20211212%20-%20MercurioCalama.png">
-</div>
-
-<div class="img-container">
-    <img src="/img/20211212%20-%20MercurioValpo.png"> 
-    <img src="/img/20210411%20-%20MercurioValpo.png"> 
-</div>
-
-<div class="img-container">
-    <img src="/img/20211212%20-%20AustralOsorno.png"> 
-    <img src="/img/20210411%20-%20AustralOsorno.png"> 
-</div>
-
 <h3 id="on-the-front-page">La Segunda</h3>
 
 <div class="img-container">
@@ -224,6 +206,8 @@ gap: 5px;
 
 <div class="img-container">
         <img src="/img/20210808%20-%20MercurioValpo.png"> 
+        <img src="/img/20211212%20-%20MercurioValpo.png"> 
+        <img src="/img/20210411%20-%20MercurioValpo.png"> 
 </div>
 
 <h3 id="on-the-front-page">El Mercurio</h3>
@@ -236,14 +220,32 @@ gap: 5px;
 <h3 id="on-the-front-page">Regional</h3>
 
 <div class="img-container">
+    <img src="/img/20211212%20-%20AustralValdivia.png"> 
+    <img src="/img/20211212%20-%20El_Llanquihue.png"> 
+    <img src="/img/20211212%20-%20MercurioCalama.png">
+</div>
+
+
+
+
+<div class="img-container">
+    <img src="/img/20211212%20-%20AustralOsorno.png"> 
+    <img src="/img/20210411%20-%20AustralOsorno.png"> 
+    <img src="/img/20240414%20-%20AustralOsorno.png"> 
+</div>
+
+
+<h3 id="on-the-front-page">Regional</h3>
+
+<div class="img-container">
     <img src="/img/20210411%20-%20El_Sur.png"> 
+    <img src="/img/20240414%20-%20El_Sur.png"> 
     <img src="/img/20160522%20-%20El_Centro.png">
 </div>
 
 <div class="img-container">
     <img src="/img/20210411%20-%20Estrella_Iquique.png"> 
     <img src="/img/20211215%20-%20La_Discusion.png"> 
-    <img src="/img/20240414%20-%20El%20Austral.png"> 
 </div>
 
 
@@ -262,7 +264,6 @@ gap: 5px;
 
 
 <div class="img-container">
-    <img src="/img/20240414%20-%20El%20Sur.png"> 
 </div>
 
 
