--- a/covers/index.html
+++ b/covers/index.html
@@ -226,16 +226,12 @@ gap: 5px;
 </div>
 
 
-
-
 <div class="img-container">
     <img src="/img/20211212%20-%20AustralOsorno.png"> 
     <img src="/img/20210411%20-%20AustralOsorno.png"> 
     <img src="/img/20240414%20-%20AustralOsorno.png"> 
 </div>
 
-
-<h3 id="on-the-front-page">Regional</h3>
 
 <div class="img-container">
     <img src="/img/20210411%20-%20El_Sur.png"> 
@@ -258,7 +254,7 @@ gap: 5px;
 
 <div class="img-container">
     <img src="/img/20240414%20-%20Austral%20de%20Valdivia.png"> 
-    <img src="/img/20240414%20-%20Austral%20de%20Osorno.png"> 
+    <img src="/img/20240414%20-%20AustralOsorno_2.png"> 
     <img src="/img/20240414%20-%20El%20Mercurio%20de%20Calama.png"> 
 </div>
 
