--- a/columns/index.html
+++ b/columns/index.html
@@ -442,6 +442,7 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240501 - ¿Por qué es intocable el refugio de delincuentes de Temucuicui y las autoridades no actúan?</li>
 <li>20240428 - Reforma política: el perímetro de lo políticamente posible</li>
 <li>20240421 - La banalización de la política exterior</li>
 <li>20240414 - Chile y el caso de Ronald Ojeda: Todo tibio. Demasiado tibio</li>
