--- a/columns/index.html
+++ b/columns/index.html
@@ -119,6 +119,8 @@ mark {
 <hr>
 <ul>
 
+<li>20240508 - Punto de inflexión</li>  
+<li>20240423 - El torpedo</li>  
 <li>20240419 - La pelota al piso</li>  
 <li>20240418 - Mismo problema, distinta reacción</li>  
 <li>20240406 - La antítesis</li>  
@@ -442,6 +444,8 @@ mark {
 <p><a href="https://www.ex-ante.cl"><em>Ex-Ante</em></a></p>
 <hr>
 <ul>
+<li>20240510 - Incentivos y magia en el ciclo económico</li>
+<li>20240503 - Orbitario del perro matapacos: Un legado de división</li>
 <li>20240501 - ¿Por qué es intocable el refugio de delincuentes de Temucuicui y las autoridades no actúan?</li>
 <li>20240428 - Reforma política: el perímetro de lo políticamente posible</li>
 <li>20240421 - La banalización de la política exterior</li>
